--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-toastify": "^9.1.1"
