video-32-upload-product-image

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MONGODB_URI=mongodb+srv://kasget1:1234Kassu@cluster0.bxm2k1p.mongodb.net/next-tailwind-amazona?retryWrites=true&w=majority
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=gift-cane
+NEXT_PUBLIC_CLOUDINARY_API_KEY=254267415949817
+CLOUDINARY_SECRET=1Wg6ww8ueAa3mmUMDMMWLDOGAb8
+CLOUDINARY_URL=CLOUDINARY_URL=cloudinary://254267415949817:1Wg6ww8ueAa3mmUMDMMWLDOGAb8@gift-cane
+
